# curium

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  main.cpp  parse.lex  parser.out  pyproject.toml  setup.py  test.casm  test.py  tests.py
.github/workflows/: codeql-analysis.yml
curium/: __init__.py  assemble.cpp  assemble.h  compile.py  error.py  lex.py  opcodes.h  parse.py  tokens.py
curium/assembler/: __init__.py  asm.peg  lexer.py  parser.py
curium/compiler/: __init__.py
curium/errors/: __init__.py
curium/lexer/: __init__.py  tokens.py
curium/parser/: __init__.py  lang.lark  lang.peg  tree.py
curium/preprocessor/: __init__.py
docs/: CNAME  core.md  functions.md  index.html  index.md  package.json  variables.md
docs/docdist/: 404.html  index.html
docs/docdist/about/: index.html
docs/docdist/config/: index.html
docs/docs/: 404.html  index.html
docs/docs/about/: index.html  intermediate.html  more.html
docs/docs/config/: index.html
docs/docs/testing/: index.html
docs/docs/tutorial/: index.html
docs/source/: package.json
docs/source/src/: index.md
docs/src/: index.md
docs/src/.vuepress/: config.js
tests/: test0.cm  test0.cm.res  test1.cm  test1.cm.res  test1.cr  test2.cm.res  test3.cm.res
tests/asm/: test0.casm
tests/curium/: test0.cm  test0.cm.res  test1.cm  test1.cm.res  test2.cm  test2.cm.res  test3.cm  test3.cm.res
tests/ir/: test0.cir  test0.cir.asm  test1.cir  test1.cir.asm  test2.cir  test2.cir.asm  test3.cir  test3.cir.asm  test4.cir  test4.cir.asm  test5.cir  test5.cir.asm
(+107 files in other folders)
