[tool.poetry]
name = "peperworx-lang"
version = "0.0.0"
description = "A basic, C-like language written using python"
authors = ["Riley Wilton <meetingprince34@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark-parser = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
